user: Fix broken UserServiceTest tests
For some reason a few of the tests failed because we added @Repository
to the repositories. Instead of figuring out, why that happened I simply
made the tests actual unit tests.